tests/positive/basic/abs_zero/input.ci
void main() { print(toString(abs(0.0)) + "\n"); }
