tests/negative/semantic/wrong_arg_count_appendfile/input.ci
void main() {
    print(toString(appendFile("x")) + "\n");
}
